--- a/css/Comunidad.css
+++ b/css/Comunidad.css
@@ -1,335 +1,324 @@
 /* Media queries para iPad landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    /* Estilos específicos para iPad en modo landscape */
-  }
-  
-  /* Media queries para iPad portrait */
-  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-    /* Estilos específicos para iPad en modo portrait */
-  }
-  
-  /* Estilos de la cabecera */
-  .header .navbar-brand {
-    color: white !important;
-  }
-  
-  .header .nav-link {
-    color: white !important;
-    font-size: 16.5px;
-  }
-  
-  .header .nav-link:hover {
-    color: rgb(99, 56, 56) !important;
-  }
-  
-  @media(max-width: 700px) {
-    .nav-link {
+  /* Estilos específicos para iPad en modo landscape */
+}
+
+/* Media queries para iPad portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  /* Estilos específicos para iPad en modo portrait */
+}
+
+/* Estilos de la cabecera */
+.header .navbar-brand {
+  color: white !important;
+}
+
+.header .nav-link {
+  color: white !important;
+  font-size: 16.5px;
+}
+
+.header .nav-link:hover {
+  color: rgb(99, 56, 56) !important;
+}
+
+@media (max-width: 700px) {
+  .nav-link {
       text-align: center;
-    }
   }
-  
-  .header .navbar {
-    background-image: linear-gradient(to right, #F5E2BE, #e07A76);
-  }
-  
-  /* Estilos generales */
-  body {
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 100;
-    font-style: normal;
-    font-size: 22px;
-  }
-  
-  h1 {
-    font-family: "Hammersmith One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 38px;
-  }
-  
-  h2 {
-    font-family: "Hammersmith One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 30px;
-  }
-  
-  h3 {
-    font-family: "Hammersmith One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 26px;
-  }
-  
-  #postContent {
-    width: 100%;
-    height: 100px;
-    resize: none;
-  }
-  
-  .bg-green {
-    border-radius: 3%;
-    background: #f5e2be;
-  }
-  
-  .form-label {
-    color: black;
-  }
-  
-  .icon-circle {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #f8c0a9;
-    line-height: 30px;
-    margin-right: 10px;
-  }
-  
-  .icon-circle i {
-    color: white;
-  }
-  
-  .info {
-    display: inline-block;
-    vertical-align: middle;
-  }
-  
-  .warnings {
-    color: red;
-    font-size: 14px;
-    margin-top: 10px;
-    text-align: center;
-  }
-  
-  #myMap {
-    width: 95%;
-    height: 220px;
-  }
-  
-  .col-sm {
-    margin-bottom: 20px;
-  }
-  
-  #parrafo {
-    text-align: justify;
-    margin-right: 20px;
-  }
-  
-  #col-der {
-    max-width: 470px;
-    margin-bottom: 0;
-  }
-  
-  /* Estilos para evitar subrayado en los links */
-  .no-underline {
-    text-decoration: none;
-    color: black;
-  }
-  
-  /* Estilos para tags */
-  span.tag {
-    background-color: #DC9693;
-    margin-right: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    border-radius: 80px;
-    color: white;
-  }
-  
-  .tag {
-    display: inline-block;
-    background-color: #7c946c;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 10px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    font-size: 11px;
-  }
-  
-  .tag:hover {
-    background-color: #F1D7A7;
-    cursor: pointer;
-  }
+}
 
-  .tags {
-    display: flex;
-    gap: 5px;
-    flex-wrap: wrap;
-  }
-  
-  .tag {
-    background-color: #eee;
-    padding: 5px 10px;
-    border-radius: 3px;
-    font-size: 0.9em;
-  }
+.header .navbar {
+  background-image: linear-gradient(to right, #F5E2BE, #e07A76);
+}
 
-  /* Estilos para elementos de la lista personalizada */
+/* Estilos generales */
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size: 22px;
+}
 
-  /* titulo de la pagina*/
-  #title{
-    text-align: left;
-    background-color: #FBE2DA;
+h1 {
+  font-family: "Hammersmith One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 38px;
+}
 
-  } 
-  
-  #title-1{
-    text-align: left;
-    margin-left: 38px;
-  }
+h2 {
+  font-family: "Hammersmith One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 30px;
+}
 
-  .list-group-item-custom {
-    background-blend-mode: darken;
-    color: #000;
-    padding-left: 50%;
-  }
-  
-  /* Estilos para botones */
-  .button {
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px 4px 10px;
-    cursor: pointer;
-  }
-  
-  .button1 {
-    background-color: #7c947c;
-  }
-  
-  .button2 {
-    background-color: #e07a76;
-  }
-  
-  .button3 {
-    background-color: #f3ab91;
-  }
-  
-  .left-sidebar {
-    background-color: #f5e2be59;
-    padding: 15px 10px 10px 10px;
-    height: 100%;
-    border-radius: 12px;
+h3 {
+  font-family: "Hammersmith One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 26px;
+}
 
-  }
-  
-  #postType {
-    width: 80%;
-  }
-  
-  /* Alerta de publicar */
-  .alert {
-    display: none;
-  }
-  
-  /* Estilos para botones en enlaces de tarjetas */
-  .card-link-btn {
-    background-color: #7c947c;
-    border: none;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 8px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-  }
-  
-  #post-btn {
-    display: grid;
-    place-items: center;
-    height: auto;
-    background-color: #7C946C;
-    border-radius: 10px;
-    border: none;
-    gap: 10px;
-    padding: 8px;
-    margin: 10px;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: white !important;
-    font-size: 16.5px;
-  }
-  
-  /* Estilos para contenedores de tarjetas */
-  .card-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .card {
-    width: 80%;
-    margin-bottom: 20px;
-  }
-  
+.icon-circle {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #f8c0a9;
+  line-height: 30px;
+  margin-right: 10px;
+}
 
-  
-  .card-profile-photo {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .card-img-top {
-    height: 250px;
-    width: 80%;
-  }
-  
-  /* Colores específicos para los botones */
-  .badge-recomendacion {
-    background-color: #6C825E;
-    color: #fff;
-    border-radius: 0.25rem;
-  }
-  
-  .badge-advertencia {
-    background-color: #B72E2A;
-    color: #fff;
-  }
-  
-  .badge-resena {
-    background-color: #D49521;
-    color: #fff;
-  }
-  
-  /* Botones de conexión */
-  button.bn-sl {
-    background-color: #F49E7C;
-    border: none;
-  }
-  
-  button.bn-sl:hover {
-    background-color: black;
-  }
-  
-  button.bn-mg {
-    background-color: #ECC783;
-    border: none;
-  }
-  
-  #sticky-container {
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
-    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
-    padding: 10px;
-  }
+.icon-circle i {
+  color: white;
+}
 
-  #typePostSelect{
-    border-radius: 7px;
-    border: 1px solid #ccc;
-  }
+.info {
+  display: inline-block;
+  vertical-align: middle;
+}
 
-  .bi-send{
-    margin-right: 5px
+.warnings {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: center;
+}
 
-  }
+/* específicos para comunidad */
+
+/* Estilos para evitar subrayado en los links */
+.no-underline {
+  text-decoration: none;
+  color: black;
+}
+
+/* estilos para las etiquetas de publicaciones.js */
+.bg-Type {
+  background-color: #CBB2A4;
+  padding: auto; /* Ajusta el relleno */
+  border-radius: 10px; /* Ajusta el radio del borde */
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+/* título de la página */
+#title {
+  text-align: left;
+  background-color: #FBE2DA;
+}
+
+/* texto del título */
+#title-1 {
+  text-align: left;
+  margin-left: 38px;
+}
+
+/* Estilos para botones */
+.button {
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px 4px 10px;
+  cursor: pointer;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+/* lado izquierdo */
+.left-sidebar {
+  background-color: #f5e2be59;
+  padding-left: 20px;
+  height: 100%;
+  border-radius: 12px;
+}
+
+#sticky-container {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  padding: 10px;
+}
+
+/* filtro tipo de destino */
+#typePostSelect {
+  border-radius: 7px;
+  border: none;
+}
+
+button#dropFilter {
+  background-color: #EECF95;
+  border: none;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+/* Lado derecho */
+/* publicaciones */
+/* text area compartir algo */
+#postContent {
+  width: 100%;
+  height: 100px;
+  resize: none;
+}
+
+/* botón publicar */
+#post-btn {
+  display: grid;
+  place-items: center;
+  height: auto;
+  background-color: #809871;
+  border-radius: 10px;
+  border: none;
+  gap: 10px;
+  padding: 8px;
+  margin: 10px;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white !important;
+  font-size: 16.5px;
+}
+
+#post-btn:hover{
+  background-color: #586A4D;
+}
+
+#bt-Borr{
+  color: #3B4733;
+  border: none;
+}
+
+#bt-Borr:hover{
+  background-color: #E1D3CB
+}
+
+#bt-Des{
+  color: #3B4733;
+  border: none;
+}
+
+#bt-Des:hover{
+  background-color: #E1D3CB
+}
+
+
+/* Colores específicos para los botones tarjetas y publicación */
+.badge-recomendacion {
+  background-color: #6C825E;
+  color: #fff;
+  margin: auto;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+.badge-advertencia {
+  background-color: #B72E2A;
+  color: #fff;
+  margin: auto;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+.badge-resena {
+  background-color: #D49521;
+  color: #fff;
+  margin: auto;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+/* tipo de viaje y publicacion en la misma linea*/
+.viajePublicacion{
+  display: flex;
+  gap: 10px; 
+  align-items: center; 
+  margin-bottom: 10px;
+}
+
+.card-text {
+  margin: 0;
+}
+
+
+
+/* Botones de conexión ambos */
+/* seguir leyendo */
+button.bn-sl {
+  background-color: #E07A76;
+  border: none;
+  font-family: "IBM Plex Sans", sans-serif;
+  margin-inline: 5px;
+}
+
+button.bn-sl:hover {
+  background-color: #933310;
+}
+
+/* me gusta */
+button.bn-mg {
+  background-color: #F3AB91;
+  border: #ECC783;
+  font-family: "IBM Plex Sans", sans-serif;
+  margin-inline: 5px;
+}
+
+button.bn-mg:hover {
+  border: none;
+  background-color: #933310;
+}
+
+/* dropdown */
+button.dropdown-toggle {
+  background-color: #F5E2BE;
+  border: none;
+  font-family: "IBM Plex Sans", sans-serif;
+  margin-inline: 5px;
+}
+
+button.dropdown-toggle:hover {
+  background-color: #B72E2A;
+}
+
+
+/* tarjetas */
+/* Estilos para contenedores de tarjetas */
+.card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* profilePhoto de las cards */
+.card-profile-photo {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+/* imágenes en el card */
+.card-img-top {
+  height: 250px;
+  width: 10%;
+}
+
+/* Estilos para las etiquetas de tarjetas.js */
+span.badge-secondary {
+  background-color: #CBB2A4;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-inline: 5px;
+  border-radius: 10px;
+  color: white;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+/* recomendacion y tipo en la misma linea*/
+.reco-tags-container {
+  display: inline-flex;
+  flex-direction: left;
+  margin-inline: 5px;
+}
