--- a/css/Iniciar-Sesion.css
+++ b/css/Iniciar-Sesion.css
@@ -42,6 +42,7 @@
 /* Estilos para inicio de sesión*/
 #saludo{
     margin-top: 30px;
+    text-align: center;
     
 }
 
@@ -62,7 +63,6 @@
     max-width: 100%; /*La imagen no puede ser más ancha que el contenedor */
     max-height:100%; /* La imagen no puede ser más alta que el contenedor */
     
-    
 }
 
 #left{
@@ -70,6 +70,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    margin-right: 10%;
 }
 
 @media (max-width: 576px) {
@@ -80,11 +81,12 @@
     #logodos{
         max-width: 70%; /*Reducir el tamaño en pantallas pequeñas*/
         margin-top: 15px;
-        margin-bottom: 15px; 
+        margin-bottom: 20px; 
     }
 
     #saludo{
         margin-top: auto;
+        text-align: center;
     }
 }
 
@@ -95,7 +97,21 @@
     text-align: center;
 }
 
-.btn:active{
+.btn:hover{
     background-color: #e07a76;
     border: #e07a76;
+    border-radius: 10%;
 }
+
+a:link {
+    color: #7C946C;
+}
+
+a:visited {
+    color:#e07A76;
+}
+
+a:hover {
+    background: #f9efd9;
+    border-radius: 6%;
+  }
