--- a/css/Password-Reestablecer.css
+++ b/css/Password-Reestablecer.css
@@ -36,7 +36,8 @@
         padding: 20px;
     }
 
-    p{text-align: justify;}
+    p{text-align: justify;
+    }
 
 
     /*Estilos contenido de recupera contraseña */
@@ -59,21 +60,24 @@
         flex-direction: column;
     }
 
-    #logorosa{
+    #logodos{
         max-width: 70%;
         margin-top: 15px;
         margin-bottom: 15px;
-        background-color: #ffeeef;
-        border-radius: 20px;
-        padding: 30px 10px 30px 10px;
     }
 
 
 }
 
-#logorosa{
+#logodos{
     max-width: 100%;
     max-height: 100%;
+}
+
+#left{
+
+    justify-content: center;
+
 }
 
 #right{
@@ -84,7 +88,6 @@
 }
 
 
-
 .btn{
     background-color: #7C946C;
     border: #7C946C;
@@ -92,7 +95,21 @@
     text-align: center;
 }
 
-.btn:active{
+.btn:hover{
     background-color: #e07a76;
     border: #e07a76;
+    border-radius: 10%;
 }
+
+a:link {
+    color: #7C946C;
+}
+
+a:visited {
+    color:#e07A76;
+}
+
+a:hover {
+    background: #f9efd9;
+    border-radius: 6%;
+  }
